--- a/literatura.bib
+++ b/literatura.bib
@@ -48,6 +48,14 @@
   address   = {Boca Raton},
   isbn      = {978-0824753849}
 }
+@book{HughesDrury2013,
+    author    = {Hughes, Austin and Drury, Bill},
+    title     = {Electric Motors and Drives: Fundamentals, Types and Applications},
+    publisher = {Newnes},
+    year      = {2013},
+    edition   = {4th},
+    isbn      = {978-0-08-098332-5}
+}
 @INPROCEEDINGS{cite:karakteristike_motora,
 
   author={Solomon, Olusegun and Famouri, Parviz},
